link coach button to coach login

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 08 19:55:15 CDT 2019
-sdk.dir=/Users/Jake/Library/Android/sdk
+#Wed Jul 10 11:09:14 CDT 2019
+sdk.dir=C\:\\Users\\sherr\\AppData\\Local\\Android\\Sdk
