--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ViewTeamsActivity"></activity>
+        <activity android:name=".PickTeamActivity"></activity>
+        <activity android:name=".ViewTeamsActivity" />
         <activity android:name=".ViewGamesActivity" />
         <activity android:name=".CoachLoginActivity" />
         <activity android:name=".AddActionActivity" />
