--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PickTeamActivity"></activity>
+        <activity android:name=".ViewActionActivity"></activity>
+        <activity android:name=".PickTeamActivity" />
         <activity android:name=".ViewTeamsActivity" />
         <activity android:name=".ViewGamesActivity" />
         <activity android:name=".CoachLoginActivity" />
-        <activity android:name=".AddActionActivity" />
         <activity android:name=".ChosePlayerActivity" />
         <activity android:name=".AddStatsActivity" />
         <activity android:name=".MainActivity">
