--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".CoachLoginActivity" />
         <activity android:name=".ChosePlayerActivity" />
         <activity android:name=".AddStatsActivity" />
+        <activity android:name=".StartNewGameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
