arrange the fragment and create view my team activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ViewMyTeamActivity"></activity>
         <activity android:name=".ViewActionActivity" />
         <activity android:name=".PickTeamActivity" />
         <activity android:name=".ViewTeamsActivity" />
