--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jul 18 17:15:08 CDT 2019
-sdk.dir=/Users/MnCu/Library/Android/sdk
+#Sat Jul 20 16:18:30 CDT 2019
+sdk.dir=C\:\\Users\\sherr\\AppData\\Local\\Android\\Sdk
