link summary activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".ChosePlayerActivity" />
         <activity android:name=".AddStatsActivity" />
         <activity android:name=".StartNewGameActivity" />
+        <activity android:name=".SummaryActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
